--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ offer-card:
 
 # test drive promo
 test-drive:
-  title: Prueba el nuevo Híbrido Autorrecargable Lexus&nbsp;UX
+  title: Prueba el nuevo Lexus&nbsp;UX Híbrido Autorrecargable
   description: Lánzate a vivir tu propia escapada urbana en el nuevo Lexus&nbsp;UX.
   cta: Reserva Una Prueba De Conducción
   url: https://www.lexusauto.es/forms/secret-escapes/test-drive-se
