--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ offer-card:
 
 # test drive promo
 test-drive:
-  title: Jetzt den neuen selbstladenden Lexus&nbsp;UX Hybrid probefahren
+  title: Jetzt den neuen selbstladenden Lexus&nbsp;UX Hybrid Probe fahren!
   description: Erleben Sie Ihr eigenes City-Abenteuer bei einer Probefahrt des neuen Lexus&nbsp;UX
   cta: Probefahrt vereinbaren
   url: https://www.lexus.de/forms/secret-escapes/test-drive-se
