--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -545,3 +545,15 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91306/13cd32c8_aead_4611_aa4d_e188be767c64.jpg
   link: https://www.secretescapes.de/andalusische-eleganz-in-der-altstadt-von-sevilla-eme-catedral-hotel-sevilla-andalusien-spanien/sale
   domestic: false
+
+- title: Italienischer Luxusaufenthalt im Herzen Mailands
+  id: italienischer-luxusaufenthalt-im-herzen-mailands
+  location: TownHouse Galleria, Mailand, Italien
+  description: 5*-Hotel unter dem Dach der eleganten Galleria Vittorio Emanuele II – inkl. Frühstück &amp; Extras
+  price: 330
+  price-description: pro Unterkunft pro Nacht
+  saved: 36
+  expires: 2019/04/02
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91152/5e487247_2a47_4a2e_a2a6_68342c1d0257.jpg
+  link: https://www.secretescapes.de/italienischer-luxusaufenthalt-im-herzen-mailands-townhouse-galleria-mailand-italien/sale
+  domestic: false
