--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -257,3 +257,15 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91108/09bb4cec_3a47_4b20_8f18_46a3efb0209c.jpg
   link: https://no.secretescapes.com/aktivitetspakket-opphold-paa-gran-canaria-radisson-blu-resort-gran-canaria-la-playa-de-arguineguin-gran-canaria-spania/sale
   domestic: false
+
+- title: Elegant boutiquehotell i hjertet av Milano
+  id: elegant-boutiquehotell-i-hjertet-av-milano
+  location: TownHouse Galleria, Milano, Italia
+  description: Unikt hotell i det fasjonable kjøpesenteret Vittorio Emanuele II, med spa og restaurant&nbsp;
+  price: 3192
+  price-description: per rom per natt
+  saved: 36
+  expires: 2019/04/02
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91152/874f9f11_1d6a_44fb_a037_3a361ffe004a.jpg
+  link: https://no.secretescapes.com/elegant-boutiquehotell-i-hjertet-av-milano-townhouse-galleria-milano-italia/sale
+  domestic: false
